<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_marginBottom="30dp">

        <ImageButton
            android:layout_width="120dp"
            android:layout_height="120dp"
            android:id="@+id/photo"
            android:layout_marginBottom="20dp"
            android:layout_marginTop="20dp"
            android:layout_gravity="center_horizontal"

            android:background="@drawable/photo_border"/>

        <EditText
            style="@style/Form1Input"
            android:id="@+id/username"
            android:inputType="textPersonName"
            android:hint="@string/username"
            android:autofillHints="username"/>

        <EditText
            style="@style/Form1Input"
            android:id="@+id/email"
            android:inputType="textEmailAddress"
            android:hint="@string/email"
            android:autofillHints="emailAddress"/>

        <EditText
            style="@style/Form1Input"
            android:id="@+id/password"
            android:inputType="textPassword"
            android:hint="@string/password"
            android:autofillHints="password"/>

        <EditText
            style="@style/Form1Input"
            android:id="@+id/confirm_password"
            android:inputType="textPassword"
            android:hint="@string/confirm_password"
            android:autofillHints="password"/>

        <EditText
            style="@style/Form1Input"
            android:id="@+id/security"
            android:inputType="text"
            android:hint="@string/security_question"
            android:importantForAutofill="no" />

        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            style="@style/ButtonOrange"
            android:id="@+id/btnRegister"
            android:layout_gravity="center_horizontal"
            android:layout_marginLeft="3dp"
            android:layout_marginRight="3dp"
            android:layout_marginTop="30dp"
            android:layout_marginBottom="30dp"
            android:text="@string/register"
            android:textAllCaps="false"
            android:textColor="@color/white"/>

    </LinearLayout>

</ScrollView>