<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <TextView
            android:id="@+id/header_title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="50dp"
            android:elevation="10dp"
            android:text="@string/forgot_password"
            android:textAllCaps="true"
            android:textAlignment="center"
            android:textSize="38sp" />



        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_margin="15dp">

            <EditText
                style="@style/Form1Input"
                android:id="@+id/email"
                android:inputType="textEmailAddress"
                android:hint="@string/email"
                android:autofillHints="emailAddress"/>

            <EditText
                style="@style/Form1Input"
                android:id="@+id/security"
                android:inputType="text"
                android:hint="@string/security_code"
                android:importantForAutofill="no" />

            <EditText
                style="@style/Form1Input"
                android:id="@+id/new_password"
                android:inputType="textPassword"
                android:hint="@string/password"
                android:autofillHints="password"/>

            <Button
                android:layout_width="match_parent"
                android:layout_height="46dp"
                style="@style/ButtonOrange"
                android:id="@+id/btnReset"
                android:layout_gravity="center_horizontal"
                android:layout_marginLeft="3dp"
                android:layout_marginRight="3dp"
                android:layout_marginTop="30dp"
                android:text="@string/reset"
                android:textAllCaps="true"
                android:textSize="25sp"
                android:textAlignment="center"
                android:textColor="@android:color/white"/>



        </LinearLayout>

    </LinearLayout>


</ScrollView>