<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <EditText
            style="@style/Form1Input"
            android:id="@+id/email"
            android:inputType="textEmailAddress|text|textPersonName"
            android:hint="@string/email_or_username"
            android:autofillHints="emailAddress|username"/>

        <EditText
            style="@style/Form1Input"
            android:id="@+id/password"
            android:inputType="textPassword"
            android:hint="@string/password"
            android:autofillHints="password"/>

        <Button
            android:layout_width="match_parent"
            android:layout_height="46dp"
            style="@style/ButtonOrange"
            android:id="@+id/btnLogin"
            android:layout_gravity="center_horizontal"
            android:layout_marginLeft="3dp"
            android:layout_marginRight="3dp"
            android:layout_marginTop="30dp"
            android:text="@string/login"
            android:textAllCaps="false"
            android:textColor="@android:color/white"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="20dp"
            android:layout_marginTop="20dp"
            android:gravity="center_horizontal"
            android:orientation="vertical">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/reset"
                android:text="@string/forgot_password"/>

        </LinearLayout>

    </LinearLayout>

</ScrollView>