<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity"
    android:background="@color/grey_10"
    android:fitsSystemWindows="true"
    android:orientation="vertical">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="120dp"
        android:background="@color/teal_500">

        <androidx.appcompat.widget.Toolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar"
            app:contentInsetStartWithNavigation="0dp"
            app:popupTheme="@style/ThemeOverlay.AppCompat.Light"
            app:subtitle="Quiz Application"
            app:subtitleTextAppearance="@style/Base.TextAppearance.AppCompat.Caption"
            app:subtitleTextColor="@color/grey_10"
            app:title="Quiz Application" />

    </RelativeLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:descendantFocusability="blocksDescendants"
        android:orientation="vertical"
        android:layout_gravity="center_horizontal">

        <View
            android:layout_width="0dp"
            android:layout_height="35dp" />

        <Button
            android:id="@+id/startQuiz"
            android:layout_width="match_parent"
            android:layout_height="46dp"
            android:layout_gravity="center_horizontal"
            android:layout_marginLeft="3dp"
            android:layout_marginTop="30dp"
            android:layout_marginRight="3dp"
            android:text="@string/start_quiz"
            android:textAllCaps="false"
            android:textColor="@android:color/white"
            style="@style/ButtonOrange1"/>

        <Button
            android:id="@+id/createQuiz"
            android:layout_width="wrap_content"
            android:layout_height="46dp"
            android:layout_gravity="center_horizontal"
            android:layout_marginLeft="3dp"
            android:layout_marginTop="30dp"
            android:layout_marginRight="3dp"
            android:text="@string/create_quiz"
            android:textAllCaps="false"
            android:textColor="@android:color/white"
            style="@style/ButtonOrange1"/>

        <RelativeLayout
            android:id="@+id/logout_c"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">

            <Button
                android:id="@+id/logout"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="3dp"
                android:layout_marginTop="30dp"
                android:layout_marginRight="3dp"
                android:text="@string/logout"
                android:textAppearance="@style/Base.TextAppearance.AppCompat.Body2"
                android:textColor="@android:color/white"
                style="@style/ButtonOrange"/>

        </RelativeLayout>

    </LinearLayout>

</LinearLayout>